--- a/stylesheets/poi-hide.css
+++ b/stylesheets/poi-hide.css
@@ -1,8 +1,4 @@
-/*-----------------------------------------------------------------------------
-[TABLE OF CONTENTS]
-    +content-main
------------------------------------------------------------------------------*/
-
+/* POI hide */
 #epcurate-curation ul.tabs li.poi {
     display: none !important;
 }
