--- a/stylesheets/titlecard-hide.css
+++ b/stylesheets/titlecard-hide.css
@@ -1,8 +1,4 @@
-/*-----------------------------------------------------------------------------
-[TABLE OF CONTENTS]
-    +content-main
------------------------------------------------------------------------------*/
-
+/* Titlecard hide */
 #storyboard .storyboard-list ul li p.title,
 #storyboard .storyboard-list ul li p.hover-func .begin-title,
 #storyboard .storyboard-list ul li p.hover-func .end-title {
