--- a/stylesheets/uniform.css
+++ b/stylesheets/uniform.css
@@ -1,9 +1,4 @@
-/*-----------------------------------------------------------------------------
-[TABLE OF CONTENTS]
-    +content-main
-        =channel-list
------------------------------------------------------------------------------*/
-
+/* uniform */
 .selector,
 .radio,
 .checker,
@@ -13,12 +8,7 @@
     margin-right: 8px;
 }
 
-/**
-*
-* =radio
-*
-**/
-
+/* radio */
 div.radio {
     width: 17px;
     height: 19px;
@@ -54,12 +44,7 @@ div.radio.disabled span.checked {
     background-position: 0 -56px;
 }
 
-/**
-*
-* =checkbox
-*
-**/
-
+/* checker */
 div.checker {
     width: 22px;
     height: 29px;
