--- a/stylesheets/perfect-scrollbar.css
+++ b/stylesheets/perfect-scrollbar.css
@@ -1,3 +1,4 @@
+/* perfect scrollbar */
 .ps-container .ps-scrollbar-x {
     position: absolute; /* please don't change 'position' */
     bottom: 3px; /* there must be 'bottom' for ps-scrollbar-x */
