update from DS (1285)
將新腳本架構正式轉入 9x9 production SVN

未來會廢棄刪除的舊腳本架構檔案清單：(預計 1 週後正式刪除)
/javascripts/libs/horizontal-slider.js
/javascripts/libs/horizontal-slider.min.js
/javascripts/libs/vertical.slider.js
/javascripts/libs/vertical.slider.min.js
/javascripts/basic.js
/javascripts/channel-poi.js
/javascripts/channel.js
/javascripts/cms-settings.js
/javascripts/config.js
/javascripts/controller.js
/javascripts/curation.js
/javascripts/epcurate.js
/javascripts/episode.js
/javascripts/get-url.js
/javascripts/index.js
/javascripts/portal.brand.js
/javascripts/portal.js
/javascripts/portal.store.js
/javascripts/signin.js

git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4989 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -868,6 +868,10 @@ body.mac #title-func h2 {
 
 #content-main-wrap form .fminput .fmfield .connected .share-item {
     height: 30px;
+    padding: 0;
+}
+
+#content-main-wrap form .fminput .fmfield .connected.brand .share-item {
     padding: 0 0 0 17px;
 }
 
