--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -537,6 +537,7 @@ body.mac #title-func h2 {
     position: relative;
     color: #555;
     font-size: 13px;
+	margin: 0 100px 0 150px;
 }
 
 #content-main-wrap form .fminput .fmfield p.text,
@@ -554,6 +555,7 @@ body.mac #title-func h2 {
     height: 30px;
     margin-right: 10px;
     padding-left: 3px;
+	width: 84%;
 }
 
 #content-main-wrap form .fminput .fmfield p.text span {
@@ -563,7 +565,7 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap form .fminput .fmfield p.text span .text {
-    width: 485px;
+    width: 99.6%;
     height: 30px;
     padding-left: 4px;
     border: none;
@@ -583,8 +585,9 @@ body.mac #title-func h2 {
     float: left;
     overflow: hidden;
     height: 92px;
-    margin-right: 10px;
+    margin: 3px 10px 0 0;
     padding-left: 3px;
+	width: 84%;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span {
@@ -863,7 +866,7 @@ body.mac #title-func h2 {
 
 /* Channel settingForm fb connect */
 #content-main-wrap form .fminput .fmfield .connected {
-    padding: 7px 0 0 150px;
+    padding: 7px 0 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .connected .share-item {
@@ -1135,8 +1138,6 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap form .fminput .fmfield .reconnected .reconnect-notice {
-    width: 526px;
-    margin-left: 150px;
     color: #f00;
     line-height: 17px;
 }
@@ -1212,19 +1213,21 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap form .fminput .fmfield .notice {
-    line-height: 20px;
+    line-height: 25px;
+	white-space: nowrap;
+	position: absolute;
 }
 
 #content-main-wrap form .fminput .fmfield .notice.img-upload {
     position: absolute;
-    top: 33px;
-    left: 245px;
+    top: 35px;
+    left: 85px;
 }
 
 #content-main-wrap form .fminput .fmfield .notice.upload-notice {
     position: absolute;
     top: 56px;
-    left: 245px;
+    left: 85px;
     color: #f00;
 }
 
