--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -203,7 +203,7 @@ abbr, acronym {
 .slider-wrap {
     display: none;
     position: absolute;
-    top: 115px;
+    top: 70px;
     right: 15px;
     width: 5px;
     z-index: 5;
@@ -886,18 +886,19 @@ abbr, acronym {
 
 #content-main {
     position: relative;
-    float: left;
     min-width: 776px;
+	margin: 0px 35px 0px 200px;
+    min-width: 776px;
+	height: 100%;
+	overflow: hidden;
 }
 
 /* content-main */
 #content-main-wrap {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    margin-top: 69px;
 }
 
 /* title-func */
