--- a/stylesheets/perfect-scrollbar.css
+++ b/stylesheets/perfect-scrollbar.css
@@ -45,10 +45,6 @@
     transition: opacity .2s linear;
 }
 
-/*#content-main-wrap.ps-container .ps-scrollbar-y {
-    right: 3px;
-}*/
-
 .ps-container:hover .ps-scrollbar-y {
     opacity: 0.6;
     filter: alpha(opacity = 60);
@@ -63,4 +59,9 @@
 .ps-container .ps-scrollbar-y.in-scrolling {
     opacity: 0.9;
     filter: alpha(opacity = 90);
+}
+
+#content-main-wrap.ps-container .ps-scrollbar-y {
+    right: 15px;
+    opacity: 0.8;
 }
