--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -605,7 +605,9 @@ body.mac #title-func h2 {
 
 #content-main-wrap form .fminput .fmfield p.textarea span .textarea {
     overflow: auto;
-    height: 53px;
+    /*height: 53px;*/
+    width: 100%;
+    height: 100%;
     margin-top: 2px;
     padding: 3px;
     border: none;
