--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -705,7 +705,9 @@ body.mac #title-func h2 {
 }
 
 #content-main-wrap form .fminput .fmfield .category {
-    width: 446px;
+    /*width: 446px;*/
+    width: 84%;
+    max-width: 632px;
 }
 
 #content-main-wrap form .fminput .fmfield .select .select-btn,
@@ -774,14 +776,20 @@ body.mac #title-func h2 {
 
 #content-main-wrap form .fminput .fmfield .select.category .select-list {
     overflow: hidden;
-    width: 438px;
+    width: 100%;
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 #content-main-wrap form .fminput .fmfield .select.category .select-list li {
     float: left;
-    width: 138px;
+    width: 25%;
     height: 26px;
     padding: 0 4px;
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 #content-main-wrap form .fminput .fmfield .select .select-list {
@@ -847,6 +855,15 @@ body.mac #title-func h2 {
     -moz-border-radius:  0 0 5px 0;
     -webkit-border-radius:  0 0 5px 0;
     border-radius:  0 0 5px 0;
+}
+
+@media (max-width: 1237px) {
+    #content-main-wrap form .fminput .fmfield .select.category .select-list li {
+        width: 33%;
+    }
+    #content-main-wrap form .fminput .fmfield .select.category .select-list li:nth-child(3n+0) {
+        width: 34%;
+    }
 }
 
 #content-main-wrap form .fminput .fmfield img.icon {
@@ -1036,7 +1053,7 @@ body.mac #title-func h2 {
     top: 28px;
     left: -2px;
     z-index: 60;
-    width: 329px;
+    width: 100.5%;
     border: 1px solid #b2b2b2;
     border-top: none;
     -moz-border-radius: 0 0 5px 5px;
@@ -1049,7 +1066,7 @@ body.mac #title-func h2 {
 #content-main-wrap form .fminput .fmfield .connected .share-item .page-list ul li {
     position: relative;
     float: left;
-    width: 164px;
+    width: 50%;
     height: 28px;
     margin: 0;
     border-top: 1px solid #f5f5f5;
