--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -955,21 +955,21 @@ body.mac #title-func h2 {
 #content-main-wrap form .fminput .fmfield .connected .share-item .page-list {
     float: left;
     width: 328px;
-    height: 30px;
+    /*height: 30px;*/
     margin: -7px 14px 0 0;
     padding-left: 3px;
     background: url(../images/multi_choose_left.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .connected .share-item .page-list .page-list-right {
-    height: 30px;
+    /*height: 30px;*/
     padding-right: 3px;
     background: url(../images/multi_choose_right.png) no-repeat right 0;
 }
 
 #content-main-wrap form .fminput .fmfield .connected .share-item .page-list .page-list-middle {
     position: relative;
-    height: 30px;
+    /*height: 30px;*/
     padding: 0 5px;
     background: url(../images/multi_choose_middle.png) repeat-x;
 }
@@ -1049,11 +1049,12 @@ body.mac #title-func h2 {
 
 #content-main-wrap form .fminput .fmfield .connected .share-item .page-list ul {
     display: none;
-    position: absolute;
-    top: 28px;
-    left: -2px;
+    position: relative;
+    overflow: hidden;
+    top: -2px;
+    left: -7px;
     z-index: 60;
-    width: 100.5%;
+    width: 103.7%;
     border: 1px solid #b2b2b2;
     border-top: none;
     -moz-border-radius: 0 0 5px 5px;
