--- a/stylesheets/perfect-scrollbar.css
+++ b/stylesheets/perfect-scrollbar.css
@@ -38,7 +38,8 @@
     border-radius: 4px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
-    opacity: 0;
+    /*opacity: 0;*/
+    opacity: 0.9;
     filter: alpha(opacity = 0);
     -webkit-transition: opacity.2s linear;
     -moz-transition: opacity .2s linear;
@@ -46,14 +47,15 @@
 }
 
 .ps-container:hover .ps-scrollbar-y {
-    opacity: 0.6;
-    filter: alpha(opacity = 60);
+   /* opacity: 0.6;
+    filter: alpha(opacity = 60);*/
 }
 
 .ps-container .ps-scrollbar-y:hover {
     opacity: 0.9;
     filter: alpha(opacity = 90);
-    cursor: default;
+    /*cursor: default;*/
+    cursor: hand;
 }
 
 .ps-container .ps-scrollbar-y.in-scrolling {
